--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-html2canvas",
-  "version": "0.0.4",
+  "name": "vue3htmltocanvas",
+  "version": "0.0.1",
   "description": "Vue mixin for Html2Canvas",
   "main": "index.js",
   "semistandard": {
@@ -15,10 +15,7 @@
     "prebuild": "npm run lint",
     "build": "rm -rf dist && webpack --progress --hide-modules"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/mycure-inc/vue-html2canvas.git"
-  },
+  "repository": "https://github.com/plugpogpag/vue-html2canvas",
   "keywords": [
     "canvas",
     "html2canvas",
@@ -49,6 +46,7 @@
     "snazzy": "^8.0.0",
     "style-loader": "^0.18.2",
     "uglify-loader": "^2.0.0",
+    "vue-demi": "^0.14.6",
     "webpack": "^3.5.4"
   },
   "author": "Jofferson Ramirez Tiquez",
